welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: java.awt.Color does not take parameters
		T(i) = color(i)
                            ^Array1:11: error: java.awt.Color does not take parameters
		color(i)
                     ^Array1:13: error: java.awt.Color does not take parameters
		T(i)=color(i)
                          ^Array1:15: error: not found: value i
	for(i<-1 to getMondeHauteur()-i) {
                                      ^